# hnr26

./: .gitignore  README.md  build.sh  package-lock.json  package.json  turbo.json
apps/dashboard/: biome.json  electron-builder.json5  forge.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/dist-electron/: main.js  preload.mjs
apps/dashboard/electron/: main.ts  preload.ts
apps/dashboard/src/: App.tsx  index.css  main.tsx  renderer.tsx
apps/dashboard/src/app/: NotFound.tsx  index.ts
apps/dashboard/src/app/About/: About.tsx
apps/urmom/: build.spec  log.txt  package.json  pyproject.toml  watch.py
apps/urmom/src/: main.py
apps/urmom/src/features/: __init__.py
apps/urmom/src/features/bargain/: __init__.py  bargain.py
apps/urmom/src/features/food/: __init__.py  food.py
apps/urmom/src/features/lights_out/: __init__.py  gui.py  manager.py
apps/urmom/src/features/mom/: __init__.py  bubble.py  bubble_window.py  mom.py  popup.py  popup_window.py  timer_loop.py
apps/urmom/src/features/mom_2/: __init__.py  mom.py
apps/urmom/src/features/slipper/: __init__.py  slipper.py
apps/urmom/src/features/todo/: todo.py
apps/urmom/src/features/windows_api/: __init__.py  activewindow.py  blacklist.py  shutdown.py
apps/urmom/src/features/wyd/: __init__.py  wyd.py
apps/urmom/src/utils/: __init__.py  env.py  log.py  paths.py  tray.py  validate.py
urmom/: main.py  pyproject.toml
urmom/src/: main.py
urmom/src/features/food/: food.py
urmom/src/features/windows_api/: shutdown  shutdown.py
(+4 files in other folders)
